--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-CVars is a small C++ library that allows run-time tweaking of C++ variables.
+CVars is a small C++ library that allows run-time tweaking of variables.
 
-Within CVars, GLConsole is an example that allows OpenGL developers to easily add a 'Quake-style' debugging console to their applications.  GLConsole relies on CVars.
+Within CVars, GLConsole is an example that allows OpenGL developers to easily
+add a 'Quake-style' debugging console to their applications.  GLConsole relies
+on CVars.
 
 A short list of features:
 
@@ -13,8 +15,6 @@ A short list of features:
 - Custom console functions that take an arbitrary number of parameters allow
   the console to perform arbitrary tasks
 
-After building and installing CVars, you can use it by linking against
-libcvars.
 
 To use the GLUT interface, just include <GLConsole/GLConsole.h>.   See the demo
 in the Example directory to see how use GLConsole with GLUT.
@@ -22,11 +22,4 @@ in the Example directory to see how use GLConsole with GLUT.
 To use the FLTK interface, just include <FLConsole/FLConsole.h>.   See the demo
 in the Example directory to see how use FLConsole with FLTK.
 
-
--------------------------------------------------------------------------------
-GLConsole is released under the LGPL. Please see the file LICENSE included with
-this release for details.
-
-Copyright 2010 Gabe Sibley
-Copyright 2004 Michael Mandel
 
